# c2002

./: .dockerignore  .flake8  .gitignore  .replit  API_GUIDE.md  CHANGELOG.md  DOCKER.md  Dockerfile  MIGRATION_DOCS.md  Makefile  README.md  REFACTORING_SUMMARY.md  TODO.md  USERS.md  cleanup_final.py  cleanup_main.py  docker-compose.yml  extract_css_js.py  fix_main.py  fleet_management.db  goals.md  list_functions.py  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  remove_duplicate_routes.py  replit.md  requirements.txt  sedALRDvM  server.js  split_functions.py
attached_assets/: Pasted--Specyfikacja-Techniczna-System-Fleet-Management-Dla-Replit-com-Frontend-Backend-z-API--1759166898499_1759166898499.txt  Pasted-tom-nvidia-github-zlecenia-c2002-docker-compose-up-WARN-0000-home-tom-github-zlecenia-c2002-doc-1759236031038_1759236031038.txt
backend/api/: auth_router.py  fleet_config_router.py  fleet_data_router.py  fleet_software_router.py  fleet_workshop_router.py  scenarios_router.py  users_router.py
backend/auth/: auth.py
backups/: .gitignore  README.md
db/: README.md
docs/: API.md  ARCHITECTURE.md  DATABASE.md
functions/: initialize_sample_data.py
modules/: README_MODULES.md  __init__.py  routes.py
public/: index.html  script.js  style.css
scripts/: backup.sh  reset-passwords.sh  restore.sh  update-passwords.sql
static/: .gitkeep
tests/: README.md  conftest.py  test_auth.py  test_connect_manager.py  test_e2e_assets.py  test_fleet_config_manager.py  test_fleet_data_manager.py  test_fleet_software_manager.py  test_modules.py
(+109 files in other folders)
